# DigiFrame

./: .gitignore  Dockerfile  LICENSE  README.md  bridge.py  build.sh  canvas.py  canvas_manager.py  display_api.py  gui.py  gui_manager.py  image_manager.py  main.py  requirements.txt  run.sh  server.py  settings.yaml  sort_test.py  test.py
nodeapp/: package-lock.json  server.js
nodeapp/public/: index.html  other.html
project/: CMakeLists.txt  uhhhh.txt
project/assets/page/: basic.html  index.html
project/include/: content_manager.hpp  program.hpp  program_manager.hpp  server.hpp  sidebar.hpp  system.hpp  system_manager.hpp  widget.hpp  window.hpp
project/include/math/: point2d.hpp
project/include/util/: mouse.hpp  utility.hpp
project/include/util/helpers/: colors.hpp  logger.hpp  qthelper.hpp  shapes.hpp
project/src/: main.cpp
project/test/: test.cpp
python/: app.py  gui.py  main.py  requirements.txt  test.py
python/env/conda-meta/: _libgcc_mutex-0.1-main.json  _openmp_mutex-5.1-1_gnu.json  bzip2-1.0.8-h5eee18b_6.json  ca-certificates-2025.2.25-h06a4308_0.json  history  (+25 more)
python/static/: other.html
python/templates/: index.html
python/util/: util.py
setup/: digiframe.service  hotspot.sh  requirements.txt
static/css/: style.css
static/js/: script.js
templates/: index.html
test/: sort_test.py
util/: display_api.py  file_helper.py  sorting_helper.py  util.py
util/canvas/: canvas.py  canvas_manager.py
util/gui/: gui.py  gui_manager.py  qt_bridge.py
util/helpers/: file_helper.py  image_helper.py  string_formatter.py  yaml_helper.py
(+272 files in other folders)
